# a101-auth

./: .gitignore  .gitlab-ci.yml  docker-compose.test.yml  docker-compose.yml  production.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2021-11-14_15:28_99dee0b7208e_initial.py  2021-11-14_15:34_e8ee49fde69a_created_at_users.py
backend/celery_app/: celery.py
backend/common/: adapters.py  base_model.py  base_repository.py  decorators.py
backend/core/: config.py  events.py
backend/database/: base.py
backend/jwt_auth/: api.py  base.py  config.py  services.py
backend/sms_auth/: api.py  entities.py  exceptions.py  models.py  repository.py  schemas.py  services.py
backend/users/: entities.py  exceptions.py  models.py  repository.py  schemas.py  tasks.py
flower/: Dockerfile
nginx/: Dockerfile  nginx.conf  nginx.conf.esh
