[tool.poetry]
name = "a101-auth"
version = "0.1.0"
description = ""
authors = ["Artem Titorenko <a.titorenko@idaproject.com>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "~0.66.1"
uvicorn = {extras = ["standard"], version = "~0.14.0"}
pydantic = {extras = ["email"], version = "~1.8.2"}
python-multipart = "~0.0.5"
sqlalchemy = "~1.4.20"
alembic = "~1.6.5"
psycopg2 = "~2.9.1"
pyjwt = "~1.7.1"
pytest = "~6.2.4"
celery = "~5.1.2"
redis = "~3.5.3"
openpyxl = "~3.0.7"
Jinja2 = "~3.0.1"
smtpdfix = "~0.3.0"
freezegun = "~1.1.0"
factory-boy = "~3.2.0"
gunicorn = "~20.1.0"
fastapi-jwt-auth = "~0.5.0"
SQLAlchemy-Utils = "^0.37.9"
phonenumbers = "^8.12.36"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
